--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -237,7 +237,7 @@
 						</div>
 						<div class="mb-3">
 							<label class="form-label">Descrição do Pet</label>
-							{{ postForm.petDescription(class="form-control", id="postUF") }}
+							{{ postForm.petDescription(class="form-control", maxlength="500") }}
 						</div>
 
 						<label class="form-label">Selecione imagens</label>
