--- a/templates/verify.html
+++ b/templates/verify.html
@@ -22,7 +22,7 @@
 			<p class="mb-4">Nós enviamos um link de verificação para seu email. Por favor, verifique seu spam.</p>
 
 			<form method="POST" action="">
-				{{ verifyForm.submit(class="btn btn-primary") }}
+				{{ verify_form.submit(class="btn btn-primary") }}
 			</form>
 
 			<a href="{{ url_for('login') }}" class="d-block mt-3 text-primary">Voltar ao Login</a>
