--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
 					</div>
 				</div>
 				<div class="col-12 col-md-4 text-center">
-					<a id="install_btn" type="button"
+					<a id="installBtn" type="button"
 						class="btn btn-primary fs-5 rounded-pill text-light border border-primary px-5 py-2">
 						Instalar
 					</a>
