--- a/templates/profile.html
+++ b/templates/profile.html
@@ -90,26 +90,26 @@
 				</div>
 				<div class="modal-body">
 					<form method="POST" action="" enctype="multipart/form-data">
-						{{ profileForm.hidden_tag() }}
+						{{ profile_form.hidden_tag() }}
 						<div class="mb-3">
 							<label class="form-label">Nome de Usuário</label>
-							{{ profileForm.username(class="form-control", id="formUsername") }}
+							{{ profile_form.username(class="form-control", id="formUsername") }}
 						</div>
 						<div class="mb-3">
 							<label class="form-label">Email</label>
-							{{ profileForm.email(class="form-control", id="formEmail") }}
+							{{ profile_form.email(class="form-control", id="formEmail") }}
 						</div>
 						<div class="mb-3">
 							<label class="form-label">Telefone</label>
-							{{ profileForm.phone(class="form-control", id="formPhone", oninput="this.value=this.value.replace(/[^\d]/,'')") }}
+							{{ profile_form.phone(class="form-control", id="formPhone", oninput="this.value=this.value.replace(/[^\d]/,'')") }}
 						</div>
 						<div class="mb-3">
 							<label class="form-label">Foto de Perfil</label>
-							{{ profileForm.image(class="form-control") }}
+							{{ profile_form.image(class="form-control") }}
 						</div>
 
 						<div class="d-flex flex-row w-100">
-							{{ profileForm.submit(class="btn btn-primary mx-1") }}
+							{{ profile_form.submit(class="btn btn-primary mx-1") }}
 						</div>
 					</form>
 				</div>
@@ -126,7 +126,7 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 				</div>
 				<div class="modal-body">
-					{{ postForm.hidden_tag() }}
+					{{ post_form.hidden_tag() }}
 					<div class="mb-3">
 						<input class="form-check-input" type="checkbox" value="" id="checkPetRace">
 						<label class="form-check-label" for="checkPetRace">Raça do Pet</label>&nbsp;
@@ -149,19 +149,19 @@
 					<!-- Grupos com IDs para controle JS -->
 					<div class="mb-3" id="filterGroupPetRace">
 						<label class="form-label">Raça do Pet</label>
-						{{ postForm.petRace(class="form-control", id="petRaceFilter") }}
+						{{ post_form.pet_race(class="form-control", id="petRaceFilter") }}
 					</div>
 					<div class="mb-3" id="filterGroupPetAge">
 						<label class="form-label">Idade do Pet</label>
-						{{ postForm.petAge(class="form-control", id="petAgeFilter") }}
+						{{ post_form.pet_age(class="form-control", id="petAgeFilter") }}
 					</div>
 					<div class="mb-3" id="filterGroupPetSex">
 						<label class="form-label">Sexo do Pet</label>
-						{{ postForm.petSex(class="form-control", id="petSexFilter") }}
+						{{ post_form.pet_sex(class="form-control", id="petSexFilter") }}
 					</div>
 					<div class="mb-3" id="filterGroupPetSize">
 						<label class="form-label">Porte do Pet</label>
-						{{ postForm.petSize(class="form-control", id="petSizeFilter") }}
+						{{ post_form.pet_size(class="form-control", id="petSizeFilter") }}
 					</div>
 					<div class="mb-3" id="filterGroupPetLocation">
 						<label class="form-label">Unidade Federativa</label>
@@ -196,7 +196,7 @@
 						</select>
 
 						<label class="form-label">Município</label>
-						{{ postForm.location(class="form-control", id="filterUF") }}
+						{{ post_form.location(class="form-control", id="filterUF") }}
 					</div>
 
 					<div class="w-100">
@@ -218,22 +218,22 @@
 				</div>
 				<div class="modal-body">
 					<form method="POST" action="" enctype="multipart/form-data">
-						{{ postForm.hidden_tag() }}
+						{{ post_form.hidden_tag() }}
 						<div class="mb-3">
 							<label class="form-label">Informações do Pet</label>
-							{{ postForm.petName(class="form-control", placeholder="Nome do Pet") }}
+							{{ post_form.pet_name(class="form-control", placeholder="Nome do Pet") }}
 						</div>
 						<div class="mb-3">
-							{{ postForm.petRace(class="form-control") }}
+							{{ post_form.pet_race(class="form-control") }}
 						</div>
 						<div class="mb-3">
-							{{ postForm.petAge(class="form-control") }}
+							{{ post_form.pet_age(class="form-control") }}
 						</div>
 						<div class="mb-3">
-							{{ postForm.petSex(class="form-control") }}
+							{{ post_form.pet_sex(class="form-control") }}
 						</div>
 						<div class="mb-3">
-							{{ postForm.petSize(class="form-control") }}
+							{{ post_form.pet_size(class="form-control") }}
 						</div>
 						<div class="mb-3">
 							<label class="form-label">Localização do Pet</label>
@@ -268,17 +268,17 @@
 							</select>
 						</div>
 						<div class="mb-3">
-							{{ postForm.location(class="form-control", id="postUF") }}
+							{{ post_form.location(class="form-control", id="postUF") }}
 						</div>
 						<div class="mb-3">
 							<label class="form-label">Descrição do Pet</label>
-							{{ postForm.petDescription(class="form-control", maxlength="500") }}
+							{{ post_form.pet_description(class="form-control", maxlength="500") }}
 						</div>
 
 						<label class="form-label">Selecione imagens</label>
 						<div class="d-flex flex-row w-100">
-							{{ postForm.submit(class="btn btn-primary") }}
-							{{ postForm.images(class="form-control mx-2", type="file", accept="image/*") }}
+							{{ post_form.submit(class="btn btn-primary") }}
+							{{ post_form.images(class="form-control mx-2", type="file", accept="image/*") }}
 						</div>
 					</form>
 				</div>
