--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,11 +40,13 @@
 				<br>
 
 				<div class="d-flex align-items-center gap-2">
-					<img id="postProfilePicture" style="height: 4rem; width: 4rem; border-radius: 50%; cursor: pointer;">
+					<img id="postProfilePicture"
+						style="height: 4rem; width: 4rem; border-radius: 50%; cursor: pointer;">
 					<div class="d-flex flex-column w-100">
 						<div class="d-flex">
 							<h3 id="postPetName" class="flex-grow-1" style="word-break: break-all;">Macumbinha</h3>
-							<button type="button" class="btn btn-primary flex-shrink-1" id="postDeleteBtn"><i class="bi-trash"></i></button>
+							<button type="button" class="btn btn-primary flex-shrink-1" id="postDeleteBtn"><i
+									class="bi-trash"></i></button>
 						</div>
 						<p class="fst-italic" id="postPetInfo"></p>
 					</div>
@@ -55,10 +57,11 @@
 				</div>
 
 				<div class="d-flex gap-1">
-					<button type="button" class="btn btn-primary my-1" id="audotarBtn"><i class="bi-heart"></i>&nbsp;Audotar</button>
-					<button type="button" class="btn btn-primary my-1" data-bs-toggle="collapse"
-						data-bs-target="" aria-expanded="false"
-						aria-controls="postPetDescription" id="readDescriptionBtn"><i class="bi-book"></i>&nbsp;Ler descrição</button>
+					<button type="button" class="btn btn-primary my-1" id="audotarBtn"><i
+							class="bi-heart"></i>&nbsp;Audotar</button>
+					<button type="button" class="btn btn-primary my-1" data-bs-toggle="collapse" data-bs-target=""
+						aria-expanded="false" aria-controls="postPetDescription" id="readDescriptionBtn"><i
+							class="bi-book"></i>&nbsp;Ler descrição</button>
 				</div>
 			</div>
 		</div>
@@ -129,8 +132,7 @@
 					</div>
 					<div class="mb-3" id="filterGroupPetLocation">
 						<label class="form-label">Unidade Federativa</label>
-						<select class="form-control UFSelect mb-3" id="UFSelectFilter"
-							data-select-target="filterUF">
+						<select class="form-control UFSelect mb-3" id="UFSelectFilter" data-select-target="filterUF">
 							<option value="AC">AC</option>
 							<option value="AL">AL</option>
 							<option value="AM">AM</option>
@@ -258,12 +260,15 @@
 			<img class="rounded-3 w-100 h-25" src="{{ url_for('static', filename='images/logo.svg') }}">
 
 			<ul class="navbar nav-pills flex-column mb-auto link-light align-items-start mx-4">
-				<a type="button" class="btn btn-primary m-1 align-items-center d-flex fs-4 fw-bold" href="{{ url_for('dashboard') }}"><i
-						class="bi bi-house-fill px-2 fs-3"></i>Home</a>
+				<a type="button" class="btn btn-primary m-1 align-items-center d-flex fs-4 fw-bold"
+					href="{{ url_for('dashboard') }}">
+					<i class="bi bi-house-fill px-2 fs-3"></i>Home
+				</a>
 				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5" data-bs-toggle="modal"
 					data-bs-target="#postModal"><i class="bi bi-plus-square px-2 fs-4"></i>Criar</a>
 				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"
-					href="{{ url_for('profile', id=session['user'].id) }}"><i class="bi bi-person-circle px-2 fs-4"></i>Perfil</a>
+					href="{{ url_for('profile', id=current_user.id) }}"><i
+						class="bi bi-person-circle px-2 fs-4"></i>Perfil</a>
 				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5" data-bs-toggle="modal"
 					data-bs-target="#filterModal"><i class="bi bi-funnel px-2 fs-4"></i>Filtrar</a>
 				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5" data-bs-toggle="modal"
@@ -271,11 +276,12 @@
 			</ul>
 
 			<div class="dropdown">
-				<a href="#" class="text-decoration-none dropdown-toggle fs-5 text-light" style="word-break: break-all;" data-bs-toggle="dropdown">
-					{{ session['user'].username }}
+				<a href="#" class="text-decoration-none dropdown-toggle fs-5 text-light" style="word-break: break-all;"
+					data-bs-toggle="dropdown">
+					{{ current_user.username }}
 				</a>
 				<ul class="dropdown-menu text-small shadow">
-					<li><a class="dropdown-item" href="{{url_for('logout')}}">Sair</a></li>
+					<li><a class="dropdown-item" href="{{ url_for('logout') }}">Sair</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -297,7 +303,9 @@
 					data-bs-target="#searchModal"><i class="bi bi-search px-2 fs-1"></i></a>
 				<a type="button" class="btn btn-dark align-items-center d-flex fw-bold" data-bs-toggle="modal"
 					data-bs-target="#filterModal"><i class="bi bi-funnel px-2 fs-1"></i></a>
-				<a type="button" class="btn btn-dark align-items-center d-flex" href="{{url_for('logout')}}"><i class="bi bi-box-arrow-left px-2 fs-1"></i></a>
+				<a type="button" class="btn btn-dark align-items-center d-flex" href="{{ url_for('logout') }}">
+					<i class="bi bi-box-arrow-left px-2 fs-1"></i>
+				</a>
 			</div>
 		</nav>
 
@@ -308,13 +316,15 @@
 		<!-- MOBILE NAV BOTTOM BAR -->
 		<nav class="navbar bg-dark justify-content-center flex-nowrap">
 			<ul class="navbar nav-pills flex-row justify-content-center mb-auto link-light">
-				<a type="button" class="btn btn-primary align-items-center d-flex fw-bold"><i
-						class="bi bi-house-fill px-2 fs-1"></i></a>
+				<a type="button" class="btn btn-primary align-items-center d-flex fw-bold">
+					<i class="bi bi-house-fill px-2 fs-1"></i>
+				</a>
 				<a type="button" class="btn btn-dark align-items-center d-flex" data-bs-toggle="modal"
 					data-bs-target="#postModal"><i class="bi bi-plus-square px-2 fs-1"></i></a>
 				<a type="button" class="btn btn-dark align-items-center d-flex"
-					href="{{ url_for('profile', id=session['user'].id) }}"><i
-						class="bi bi-person-circle px-2 fs-1"></i></a>
+					href="{{ url_for('profile', id=current_user.id) }}">
+					<i class="bi bi-person-circle px-2 fs-1"></i>
+				</a>
 			</ul>
 		</nav>
 	</main>
