--- a/templates/messenger.html
+++ b/templates/messenger.html
@@ -22,7 +22,8 @@
 	<!-- RECIPIENT MESSAGE -->
 	<template id="senderTemplate">
 		<div class="d-flex flex-row mx-1 my-1 justify-content-end">
-			<div class="bg-primary rounded-3 text-light m-1 p-2" id="messageBubble" style="width: fit-content; height: fit-content;">
+			<div class="bg-primary rounded-3 text-light m-1 p-2" id="messageBubble"
+				style="width: fit-content; height: fit-content;">
 			</div>
 
 			<img class="d-block object-fit-fill" id="messageImg" style="border-radius: 50%; height: 4em; width: 4em;">
@@ -34,7 +35,8 @@
 		<div class="d-flex flex-row mx-1 my-1">
 			<img class="d-block object-fit-fill" id="messageImg" style="border-radius: 50%; height: 4em; width: 4em;">
 
-			<div class="bg-secondary rounded-3 text-light m-1 p-2" id="messageBubble" style="width: fit-content; height: fit-content;">
+			<div class="bg-secondary rounded-3 text-light m-1 p-2" id="messageBubble"
+				style="width: fit-content; height: fit-content;">
 			</div>
 		</div>
 	</template>
@@ -42,8 +44,9 @@
 	<!-- CONTACT PFP -->
 	<template id="contactTemplate">
 		<div class="d-flex text-light align-items-center btn btn-dark p-0 m-md-2">
-			<img class="d-block object-fit-fill p-1" id="contactImg" style="border-radius: 50%; height: 4em; width: 45%;">
-			<span class="d-none d-md-block" style="width: 100%; word-break: break-all;" id="contactName"></span>
+			<img class="d-block object-fit-fill p-1 flex-grow-1" id="contactImg"
+				style="border-radius: 50%; height: 4em; width: 45%;">
+			<span class="d-none d-md-block flex-shrink-1" style="width: 100%; word-break: break-all;" id="contactName"></span>
 		</div>
 	</template>
 
