--- a/templates/index.html
+++ b/templates/index.html
@@ -115,8 +115,13 @@
 					</div>
 				</div>
 				<div class="col-12 col-md-4 text-center">
-					<a id="installBtn" type="button"
+					<a href="{{ url_for('dashboard') }}" type="button"
 						class="btn btn-primary fs-5 rounded-pill text-light border border-primary px-5 py-2">
+						MiiAudote Web
+					</a>
+
+					<a id="installBtn" type="button"
+						class="btn btn-primary fs-5 rounded-pill text-light border border-primary px-5 py-2 m-2">
 						Instalar
 					</a>
 
