sticky bottom and sticky top on nav

--- a/templates/messenger.html
+++ b/templates/messenger.html
@@ -202,7 +202,7 @@
 	<!-- MOBILE SCREEN -->
 	<main class="d-flex flex-column vh-100 d-lg-none">
 		<!-- MOBILE TOP NAV -->
-		<nav class="navbar d-flex flex-row align-items-center bg-dark flex-nowrap">
+		<nav class="navbar d-flex flex-row align-items-center bg-dark flex-nowrap sticky-top">
 			<div class="flex-grow-1">
 				<img class="m-2 w-100" src="{{ url_for('static', filename='images/logo_inverted.svg') }}">
 			</div>
@@ -238,7 +238,7 @@
 		</div>
 
 		<!-- MOBILE NAV BOTTOM BAR -->
-		<nav class="navbar bg-dark justify-content-center flex-nowrap">
+		<nav class="navbar bg-dark justify-content-center flex-nowrap sticky-bottom">
 			<ul class="navbar nav-pills flex-row justify-content-center mb-auto link-light">
 				<a type="button" class="btn btn-dark align-items-center d-flex" href="{{ url_for('dashboard') }}"><i
 						class="bi bi-house-fill px-2 fs-1"></i></a>
